# Capstone_Idencalve2.0

./: .gitignore  Architecture Design.md  Cargo.toml  IDenclave_Capstone_Project_Definition_Market_Analysis.md  MVP_Architecture.md  MVP_DEMO_GUIDE.md  README.md  User Stories & On-Chain Requirements.md  env.example  package-lock.json  package.json  project-idea.md  setup.sh  start-demo.sh  vision.txt
backend/: package.json
backend/prisma/: schema.prisma
backend/src/: index.js
backend/src/routes/: auth.js  identity.js  sharing.js  verification.js
backend/tests/: api.test.js  error-handling.test.js
demo-materials/: DEMO_CHECKLIST.md  DEMO_TROUBLESHOOTING.md  FAQ.md  ONE_PAGER.md  PRESENTATION_SLIDES.md  PRESENTATION_SUMMARY.md  README.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Home.tsx  Layout.tsx  TestBlockchain.tsx  WalletTest.tsx
frontend/src/components/auth/: WalletConnect.tsx
frontend/src/components/dashboard/: BusinessDashboard.tsx  UserDashboard.tsx
frontend/src/components/profile/: UserProfile.tsx  (+1 more)
frontend/src/config/: solana.ts
frontend/src/hooks/: useIdenclave.ts
frontend/src/tests/: components.test.tsx  error-handling.test.tsx  setup.ts
frontend/src/utils/: solana-client.ts
programs/: Anchor.toml  Cargo.toml  package.json
programs/src/: errors.rs  lib.rs  state.rs
programs/src/instructions/: consent.rs  identity.rs  mod.rs  verification.rs
programs/tests/: error-handling.test.ts  idenclave.test.ts
tests/: integration.test.js
(+4 files in other folders)
