[package]
name = "idenclave"
version = "0.1.0"
description = "IDenclave 2.0 - Blockchain-based identity verification system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "idenclave"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[profile.release]
overflow-checks = true
